cmake_minimum_required(VERSION 2.8)
project( HLp )
find_package( OpenCV REQUIRED )
add_executable( HLp houghlinep.cpp )
target_link_libraries( HLp ${OpenCV_LIBS} )

#cmake_minimum_required(VERSION 2.8)
#project( lanedetect )
#find_package( OpenCV REQUIRED )
#add_executable( lanedetect lanedetect.cpp )
#target_link_libraries( lanedetect ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( HLCHEVPvideo )
find_package( OpenCV REQUIRED )
add_executable( HLCHEVPvideo houghlinevideoCHEVP.cpp )
target_link_libraries( HLCHEVPvideo ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( HLvideo )
find_package( OpenCV REQUIRED )
add_executable( HLvideo houghlinevideo.cpp )
target_link_libraries( HLvideo ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( HLCHEVP )
find_package( OpenCV REQUIRED )
add_executable( HLCHEVP houghlineCHEVP.cpp )
target_link_libraries( HLCHEVP ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( get_transform )
find_package( OpenCV REQUIRED )
add_executable( get_transform getting_perspective_transform.cpp )
target_link_libraries( get_transform ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( v_transform )
find_package( OpenCV REQUIRED )
add_executable( v_transform video_tranformation.cpp )
target_link_libraries( v_transform ${OpenCV_LIBS} )

